--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>キン肉マン感想ジェネレータ</title>
-    <script src="code.jquery.com/jquery-3.3.1.js"></script>
-    <link rel="stylesheet" href="stackpath.bootstrapcdn.com/bootstrap/4.3.…" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.…" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <body class="container">
     <form id="Form" class="form-inline">
@@ -61,7 +61,7 @@
     </div>
     <span id="tweet">
     </span>
-    <script async src="platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <script type="text/javascript" src="./main.js"></script>
     </body>
 </html>
