--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <body class="container">
+    <div class="h1">キン肉マン感想ジェネレータ</div>
     <form id="Form" class="form-inline">
     <div class="form-group">
     <select class="form-control" name="form1">
@@ -53,7 +54,7 @@
     </form>
 
     </div>
-    <div class="h1">感想:
+    <div class="h2">感想:
     </div>
     <div class="display-4" id="impression">
     </div>
