--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
     <body class="container">
     <div class="h1">キン肉マン感想ジェネレータ</div>
+    <div class="h2">入力欄
+    </div>
     <form id="Form" class="form-inline">
     <div class="form-group">
     <select class="form-control" name="form1">
