--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="form-group">
     <select class="form-control" name="form1">
     <option selected>今週の</option>
+    <option></option>
     <option>今日の</option>
     <option>今回の</option>
     </select>
