--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
     <div class="display-4" id="impression">
     </div>
-    <div>感想と漫画のURLを含むツイートを作成します
+    <div class="h3">以下のボタンで感想と漫画のURLを含むツイートを作成します
     </div>
     <span id="tweet">
     </span>
